--- a/src/App.css
+++ b/src/App.css
@@ -1,162 +1,156 @@
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    /* background-color: #1c1c1c; */
-    color: #e0e0e0;
-    margin: 0;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    /* background-image: url('./assets/images/backg.jpg'); */
-    /* background-image: url("./assets/images/backg.jpg"); */
-    /* background-color: red; */
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
 }
-.home-container{
-    min-height: 100vh;
-    background-image: url('./assets/images/backg.jpg');
-    background-repeat: none;
-    background-size: cover;
-    background-position: center;
+.home-container {
+  min-height: 100vh;
+  background-image: url("./assets/images/backg.jpg");
+  background-repeat: none;
+  background-size: cover;
+  background-position: center;
 }
 .nav-container {
-    display: flex;
-    gap: 10px;
-    margin-bottom: 20px;
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
 }
 
 .nav-button {
-    background: linear-gradient(135deg, #ff7e5f, #feb47b);
-    color: #ffffff;
-    border: none;
-    padding: 12px 24px;
-    border-radius: 25px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background 0.3s, transform 0.3s, box-shadow 0.3s;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
+  background: linear-gradient(135deg, #ff7e5f, #feb47b);
+  color: #ffffff;
+  border: none;
+  padding: 12px 24px;
+  border-radius: 25px;
+  cursor: pointer;
+  font-size: 16px;
+  transition:
+    background 0.3s,
+    transform 0.3s,
+    box-shadow 0.3s;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
 }
 
 .nav-button:hover {
-    background: linear-gradient(135deg, #feb47b, #ff7e5f);
-    transform: scale(1.05);
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.5);
+  background: linear-gradient(135deg, #feb47b, #ff7e5f);
+  transform: scale(1.05);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.5);
 }
 
 .nav-button:focus {
-    outline: none;
-    background: linear-gradient(135deg, #ff6f61, #fe8a71);
+  outline: none;
+  background: linear-gradient(135deg, #ff6f61, #fe8a71);
 }
 
 .search {
-    display: inline-block;
-    position: relative;
+  display: inline-block;
+  position: relative;
 }
 
 .search input[type="text"] {
-    width: 200px;
-    padding: 10px;
-    border: none;
-    border-radius: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 200px;
+  padding: 10px;
+  border: none;
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .search button[type="submit"] {
-    background-color: #4e99e9;
-    border: none;
-    color: #fff;
-    cursor: pointer;
-    padding: 10px 20px;
-    border-radius: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    position: absolute;
-    right: 0;
-    top: 0;
-    transition: 0.9s ease;
+  background-color: #4e99e9;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: 0.9s ease;
 }
 
 .search button[type="submit"]:hover {
-    transform: scale(1.1);
-    color: #fff;
-    background-color: blue;
+  transform: scale(1.1);
+  color: #fff;
+  background-color: blue;
 }
 
 .po {
-    background: linear-gradient(135deg, #ff7e5f, #feb47b);
-    color: #ffffff;
-    padding: 20px;
-    border-radius: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
-    max-width: 600px;
-    text-align: center;
-    margin-top: 20px;
+  background: linear-gradient(135deg, #ff7e5f, #feb47b);
+  color: #ffffff;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+  max-width: 600px;
+  text-align: center;
+  margin-top: 20px;
 }
 
 .po h2 {
-    font-size: 24px;
-    margin-bottom: 15px;
+  font-size: 24px;
+  margin-bottom: 15px;
 }
 
 .about-us {
-    font-size: 18px;
-    margin: 10px 0;
+  font-size: 18px;
+  margin: 10px 0;
 }
 
 .bullet {
-    list-style: none;
-    font-size: 16px;
-    margin: 10px 0;
-    padding: 10px;
-    background: rgba(255, 255, 255, 0.2);    
-    border-radius: 10px;
-    transition: background 0.3s, transform 0.3s;
+  list-style: none;
+  font-size: 16px;
+  margin: 10px 0;
+  padding: 10px;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+  transition:
+    background 0.3s,
+    transform 0.3s;
 }
 
 .bullet:hover {
-    background: rgba(255, 255, 255, 0.3);
-    transform: scale(1.05);
+  background: rgba(255, 255, 255, 0.3);
+  transform: scale(1.05);
 }
 
 .bullet::before {
-    content: '✔';
-    color: #00ff7f;
-    margin-right: 10px;
+  content: "✔";
+  color: #00ff7f;
+  margin-right: 10px;
 }
 
 ul {
-    padding: 0;
+  padding: 0;
 }
 
 /*Landing page*/
 
-
 .text-content {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  
-  .header-title {
-    text-transform: uppercase;
-    letter-spacing: 16px;
-    color: #fff;
-    font-size: 80px;
-    margin-bottom: 32px;
-  }
-  
-  .search-box {
-    padding-top: 100px !important;
-    padding-bottom: 20px !important;
-  }
-  
-  .search-heading {
-    font-size: 30px;
-    margin-bottom: 16px;
-  }
-  
-  .detailsPageContent {
-    padding-top: 100px !important
-  }
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.header-title {
+  text-transform: uppercase;
+  letter-spacing: 16px;
+  color: #fff;
+  font-size: 80px;
+  margin-bottom: 32px;
+}
+
+.search-box {
+  padding-top: 100px !important;
+  padding-bottom: 20px !important;
+}
+
+.search-heading {
+  font-size: 30px;
+  margin-bottom: 16px;
+}
+
+.detailsPageContent {
+  padding-top: 100px !important;
+}
